# emotion-aware-movie-recommendation-system

./: .gitattributes  .gitignore  README.md  api.py  best_model.pt  chatbot.py  final_recommender.py  hello.py  initial_messages.txt  langgrapgh_flow.py  pyproject.toml  test.ipynb  workflow.ipynb
backend/: config.py  main.py
backend/dependencies/: settings.py
backend/routers/: emotions.py  genres.py  ranking.py  recommendations.py  users.py
backend/schemas/: recommendations.py
backend/services/: emotion_service.py  genre_service.py  metadata_service.py  ncf_service.py  ranking_service.py
database_movielens/: filtered_data.csv
frontend/: streamlit_app.py
frontend-showcase/: package-lock.json  package.json
frontend-showcase/src/app/: globals.css  layout.tsx  page.tsx
frontend-showcase/src/components/: providers.tsx  status-indicator.tsx  theme-toggle.tsx
frontend-showcase/src/components/showcase/: recommender-showcase.tsx
frontend-showcase/src/lib/: api.ts  config.ts  types.ts
schema/: test_db.py  user_model.py
