[project]
name = "emotion-aware-movie-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.27.2",
    "numpy>=1.26.0",
    "pandas",
    "pydantic-settings>=2.6.1",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
]
